# cxx-cmake-project-template

./: .clang-format  .clang-tidy  .clang-tidy-ignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  bootstrap.sh  check_header.py  clang-tidy-wrap  docker-compose.yml
.devcontainer/: devcontainer.json
.github/workflows/: check.yml  docs.yml  image.yml
cmake/: DemoConfig.cmake.in  build.cmake  coverage.cmake  docs.cmake  install.cmake  options.cmake  package.cmake  toolchain.cmake
cmake/sanitizers/cmake/: sanitize-helpers.cmake
cmake/scripts/: clang-tidy-wrap.py
docs/: 001-examples.md  002-design.md
docs/theme/: .gitignore  header.html.in
latest/: 001-examples_8md.html  002-design_8md.html  README_8md.html  annotated.html  annotated_dup.js  classdemo_1_1output-members.html  classdemo_1_1output.html  classdemo_1_1output.js  classdemo_1_1utils-members.html  classdemo_1_1utils.html  classdemo_1_1utils.js  classes.html  dir_000000_000001.html  dir_000000_000004.html  dir_03063dab45e47b23397ab309875654af.html  dir_03063dab45e47b23397ab309875654af.js  dir_03063dab45e47b23397ab309875654af_dep.map  dir_03063dab45e47b23397ab309875654af_dep.md5  dir_4574493c81ee9c4ba82f9a45f1fdeeb8.html  dir_4574493c81ee9c4ba82f9a45f1fdeeb8.js  dir_4574493c81ee9c4ba82f9a45f1fdeeb8_dep.map  dir_4574493c81ee9c4ba82f9a45f1fdeeb8_dep.md5  dir_49e56c817e5e54854c35e136979f97ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_ea2db1c5c9ef405bfa9ccf9d4f68ec9b.html  dir_ea2db1c5c9ef405bfa9ccf9d4f68ec9b.js  dir_ea2db1c5c9ef405bfa9ccf9d4f68ec9b_dep.map  dir_ea2db1c5c9ef405bfa9ccf9d4f68ec9b_dep.md5  dir_fc69027f86661cf52dbb685cc11e1024.html  dir_fc69027f86661cf52dbb685cc11e1024.js  dir_fc69027f86661cf52dbb685cc11e1024_dep.map  dir_fc69027f86661cf52dbb685cc11e1024_dep.md5  doxygen_crawl.html  files.html  functions.html  functions_func.html  globals.html  (+51 more)
latest/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  files_1.js  files_3.js  functions_0.js  functions_2.js  pages_0.js  pages_1.js  pages_2.js  searchdata.js
src/: CMakeLists.txt
src/demo/: CMakeLists.txt
src/demo/cmd/: CMakeLists.txt  greeting.cpp  greeting.h  main.cpp
src/demo/common/: CMakeLists.txt  utils.cpp  utils.h  utils_test.cpp  version.h.in
src/demo/output/: CMakeLists.txt  output.cpp  output.h  output_test.cpp
src/examples/: CMakeLists.txt
src/examples/grpc/: CMakeLists.txt  greeter_service.cpp  greeter_service.h  grpc_client.cpp  grpc_server.cpp
src/tests/: CMakeLists.txt
src/tests/benchmark/: CMakeLists.txt  memcpy_benchmark.cpp
src/tests/function/: CMakeLists.txt  function_test.cpp
